Change URL from fixer.io to apilayer.net

--- a/default-config.json
+++ b/default-config.json
@@ -2,6 +2,6 @@
   "dsn": "[insert your db config here]",
   "address": "0.0.0.0:8080",
   "basePrice":  100.00,
-  "exchangeRateBaseURL": "http://data.fixer.io",
+  "exchangeRateBaseURL": "http://apilayer.net",
   "exchangeRateAPIKey": "[insert your API key here]"
 }
